<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InTouch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="usernameHint">Username</string>
    <string name="pwdHint">Password</string>
    <string name="error_field_required">This field is required.</string>
    <string name="title_activity_nearby">NearbyActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email">Email</string>
    <string name="confirmPwd">Confirm password</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="user_profile_picture">Profile Picture</string>

</resources>
