<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/signin"
    tools:context="mobile08723.intouch.MainActivity$PlaceholderFragment" >

   <EditText
       android:id="@+id/username"
       android:layout_width="250dp"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="29dp"
       android:ems="10"
       android:hint="@string/usernameHint"
       android:inputType="text"
       android:maxLength="15" >

       <requestFocus />
   </EditText>

   <EditText
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/username"
       android:layout_alignRight="@+id/username"
       android:layout_below="@+id/username"
       android:layout_marginTop="25dp"
       android:ems="10"
       android:hint="@string/pwdHint"
       android:imeActionId="@+id/login"
       android:imeOptions="actionUnspecified"
       android:inputType="textPassword"
       android:maxLines="1"
       android:singleLine="true" />

   <Button
       android:id="@+id/signin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:text="@string/sign_in" />

   <Button
       android:id="@+id/signup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/signin"
       android:layout_below="@+id/signin"
       android:layout_marginTop="22dp"
       android:text="@string/sign_up" />
   
</RelativeLayout>
